--- a/Final/about.html
+++ b/Final/about.html
@@ -94,7 +94,9 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2021</div>
+                    <div class="small text-center text-muted fst-italic">上述網站外你還能...</div>
+                    <div class="small text-center text-muted fst-italic">手機：0918680252</div>
+                    <div class="small text-center text-muted fst-italic">郵件信箱：leafrost0312@gmail.com</div>
                 </div>
             </div>
         </div>
