--- a/Final/about.html
+++ b/Final/about.html
@@ -8,17 +8,17 @@
     <meta name="author" content="" />
     <title>Clean Blog - Start Bootstrap Theme</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
+    <!-- Font icons-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- CSS (Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <!-- Navigation-->
+    <!-- nav-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="index.html">RWD網頁</a>
@@ -36,29 +36,25 @@
             </div>
         </div>
     </nav>
-    <!-- Page Header-->
+    <!-- Header-->
     <header class="masthead" style="background-image: url('assets/img/about-bg.jpg')">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="page-heading">
-                        <h1>About Me</h1>
-                        <span class="subheading">This is what I do.</span>
+                        <h1>關於此網頁</h1>
+                        <span class="subheading">最新時事，動態消息立即傳送</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <!-- Main Content-->
+    <!-- Main -->
     <main class="mb-4">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus,
-                        minus!
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
                 </div>
             </div>
         </div>
@@ -94,7 +90,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic">上述網站外你還能...</div>
+                    <div class="small text-center text-muted fst-italic">上述網站外你還能聯繫...</div>
                     <div class="small text-center text-muted fst-italic">手機：0918680252</div>
                     <div class="small text-center text-muted fst-italic">郵件信箱：leafrost0312@gmail.com</div>
                 </div>
