--- a/Final/contact.html
+++ b/Final/contact.html
@@ -132,7 +132,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic">上述網站外你還能...</div>
+                    <div class="small text-center text-muted fst-italic">上述網站外你還能聯繫...</div>
                     <div class="small text-center text-muted fst-italic">手機：0918680252</div>
                     <div class="small text-center text-muted fst-italic">郵件信箱：leafrost0312@gmail.com</div>
                 </div>
