--- a/Final/about.html
+++ b/Final/about.html
@@ -54,7 +54,9 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+                    <p>此網站根據各大新聞媒體最新消息作推送</p>
+                    <p>以及近期的熱門新聞推送</p>
+                    <p>可能時不時會增加版主針砭各項新聞觀感</p>
                 </div>
             </div>
         </div>
