--- a/Final/post.html
+++ b/Final/post.html
@@ -46,7 +46,7 @@
                         <h2 class="subheading">一句話帶疫情玄機</h2>
                         <span class="meta">
                                 Posted by
-                                <a href="#!">蘋果日報</a>
+                                <a href="#!">蘋果新聞網</a>
                                 on June 16, 2021
                             </span>
                     </div>
@@ -71,7 +71,7 @@
                     <p>陳時中之後在記者會被問到解封問題，他強調大家必須要注意，假定開放一個，有沒有辦法只開放一個？因為會有「連鎖效應」，防線就會出現問題，「這會有互相效應在，所以要很謹慎。」他並表示未來也不會解到剛剛好，因為仍有連鎖效應在。</p>
                     <p>
                         Placeholder text by
-                        <a href="https://tw.appledaily.com/life/20210616/W4YIXRMAFNHN5FMRTKQW6HQF54/">蘋果日報</a> &middot; Images by黃瑞娟攝
+                        <a href="https://tw.appledaily.com/life/20210616/W4YIXRMAFNHN5FMRTKQW6HQF54/">蘋果新聞網</a> &middot; Images by黃瑞娟攝
                     </p>
                 </div>
             </div>
