--- a/Final/post3.html
+++ b/Final/post3.html
@@ -71,7 +71,7 @@
                     <p>但面對擁有大批全球粉絲的C羅，可口可樂也不敢得罪，今天做出回應：「我們認為每個人都有權利選擇自己偏好的飲料，而且每個人都有不同的口味與需求。」可口可樂的發言人也補充說：「在記者會上，除了可口可樂和無糖可口可樂，我們也為球員提供水。」（陳雍仁／綜合報導）</p>
                     <p>
                         Placeholder text by
-                        <a href="https://tw.appledaily.com/life/20210616/W4YIXRMAFNHN5FMRTKQW6HQF54/">蘋果日報</a> &middot; Images by網路翻攝
+                        <a href="https://tw.appledaily.com/life/20210616/W4YIXRMAFNHN5FMRTKQW6HQF54/">蘋果新聞網</a> &middot; Images by網路翻攝
                     </p>
                 </div>
             </div>
